Update ethical publishing.

--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -235,7 +235,8 @@
     <p><span class="c1">To handle an allegation or discovery of misconduct, TMLR follows the Committee on
             Publishing Ethics&rsquo;s (COPE) guidelines listed below. According to these guidelines, a determination of
             misconduct may result in TMLR contacting the author institutions, funding agencies, and/or potential
-            victims.</span></p>
+            victims. At the discretion of the Editors-in-Chief, additional actions may be taken, including issuing
+            an informal or formal warning to the offender and barring them from submitting a manuscript to TMLR for a fixed duration.</span></p>
     <p></p>
     <p><span class="bold">Intellectual property, including plagiarism or redundant (duplicate) publication:</span></p>
     <ul class="c9 lst-kix_5zxkbiqp0udh-0 start">
@@ -256,8 +257,10 @@
       <li><span class="c1">COPE Council. <a href="https://doi.org/10.24318/cope.2019.2.5">Reviewer suspected to have appropriated an author’s ideas or data</a>.</span></li>
     </ul>
     <p></p>
-    <p><span class="c1">TMLR follows the <a href="https://doi.org/10.24318/cope.2019.1.4">guidelines for retracting articles</a> by COPE Council. In the event that TMLR
-            retracts a publication because evidence shows that the findings are unreliable, either because of misconduct
-            or honest error, or that the findings have been plagiarized or previously published, or that the research is
-            unethical), a Notice of Retraction will be attached to the paper on OpenReview.</span></p>
+
+    <p><span class="c1">After a paper is accepted and the Action Editor approves the camera-ready version, this version is considered final and the paper is published. Under exceptional circumstances, the authors may wish to revise the camera-ready version of the paper -- requests of this nature should be directed to the Editors in Chief, describing the nature of the revision and the reasons why this revision was not performed prior to publication.</span></p>
+
+    <p><span class="c1">By default, TMLR follows COPE guidelines (e.g., for <a href="https://doi.org/10.24318/cope.2019.2.10">adding</a> or <a href="https://doi.org/10.24318/cope.2019.2.11">removing</a> authors, or <a href="https://doi.org/10.24318/cope.2019.1.4">retracting</a> a paper). In the event that TMLR retracts a publication because evidence shows that the findings are unreliable, either because of misconduct or honest error, or that the findings have been plagiarized or previously published, or that the research is unethical), a Notice of Retraction will be attached to the paper on OpenReview.</span></p>
+
+    <p><span class="c1">In the case of post-publication edits or corrections to the paper, the EiCs may involve the paper's Action Editor to judge the proposed edits, including their correctness and/or appropriateness (checking, e.g., if the paper instead ought be retracted, or if the changes should be included in a separate and subsequent publication). Any significant changes should be documented in a section at the end of the paper (subsequent to any Acknowledgments, prior to References) titled "Post-Publication Changes." In all cases of modifications to published papers or retractions, the paper's full revision history will remain visible on OpenReview, and the Editors in Chief will post a public comment on the OpenReview page upon update indicating the nature of any changes made to the paper.</span></p>
 {% endblock %}
