--- a/templates/ethics.html
+++ b/templates/ethics.html
@@ -5,7 +5,7 @@
     <h1 class="c9" id="h.7lf6ddsxgsyu"><span class="c12">TMLR </span><span class="c12">Ethics Guidelines</span></h1>
     <p class="c14"><span class="c15">Adapted from the </span><span class="c5 c15 c16"><a class="c4"
                 href="https://www.google.com/url?q=https://neurips.cc/public/EthicsGuidelines&amp;sa=D&amp;source=editors&amp;ust=1638474654843000&amp;usg=AOvVaw3CtzUf99tU2Rloz6Q3l8Mg">NeurIPS
-                Ethics Guidelines</a></span></p>
+                Ethics Guidelines</a>. For additional guidelines on ethical publishing, see our <a class="c4" href="https://jmlr.org/tmlr/editorial-policies.html">editorial policies</a>.</span></p>
     <h2 class="c9" id="h.9vzvbriuiq3b"><span class="c3 c7">Introduction</span></h2>
     <p class="c2"><span class="c3 c0">As ML research and applications have increasing real-world impact, the likelihood
             of meaningful social benefit increases, as does the attendant risk of harm. Indeed, problems with data
