Add FAQ on Google Scholar

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -194,6 +194,11 @@ A: LLMs may be used as general-purpose assistive tools. Whichever tools are used
 <p><span>A: Only the action editor (not the reviewers) will see the previous submission URL, so including it will not violate our guidelines.
 </p>
 
+<p><span class="italic">Q: Why didn't Google Scholar index my paper? 
+</p>
+<p><span>A: We aren't able to tell you. Google Scholar is unfortunately unreliable and a black box to us. While it often picks up published TMLR papers, it sometimes does not, and there is no effective way to request for them to include a particular paper. Fortunately, it is possible to edit or add entries to your own Google Scholar profile, and it is usually able to pick up papers posted to arXiv, so consider posting your paper to arXiv, waiting for it to be indexed, and then edit the details to reflect your paper's publication in TMLR.
+</p>
+
 
 <h2><span>Reviewers</h2>
 
