Add FAQ on thesis works

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -199,6 +199,10 @@ A: LLMs may be used as general-purpose assistive tools. Whichever tools are used
 <p><span>A: We aren't able to tell you. Google Scholar is unfortunately unreliable and a black box to us. While it often picks up published TMLR papers, it sometimes does not, and there is no effective way to request for them to include a particular paper. Fortunately, it is possible to edit or add entries to your own Google Scholar profile, and it is usually able to pick up papers posted to arXiv, so consider posting your paper to arXiv, waiting for it to be indexed, and then edit the details to reflect your paper's publication in TMLR.
 </p>
 
+<p><span class="italic">Q: Can I submit a paper based on my bachelor's/master's/PhD thesis? 
+</p>
+<p><span>A: Yes, we have no policy that precludes submission of thesis work; for our purposes, a thesis is considered similarly to a pre-print, e.g., on arXiv. Note that your TMLR submission should be written according to the style and customs of machine learning research papers published in TMLR, which may differ from the style of writing in a thesis. Furthermore, institutions may have their own policies surrounding publication of thesis work, be sure to familiarize yourself with any such policies.</p> 
+
 
 <h2><span>Reviewers</h2>
 
