--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -71,6 +71,11 @@ $(document).ready(function(){
       <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google DeepMind.</li>
     </ul>
 
+    <h3>Technical Support</h3>
+    <p>
+      We thank OpenReview and in particular Celeste Martinez Gomez for the peer-review infrastructure and technical support.
+    </p>
+
     <h3>TMLR Action Editors</h3>
       <ul class="editors">{% for e in action_editors %}
         <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>
