Updated technical support section.

--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -73,7 +73,7 @@ $(document).ready(function(){
 
     <h3>Technical Support</h3>
     <p>
-      We thank OpenReview and in particular Celeste Martinez Gomez for the peer-review infrastructure and technical support.
+      We thank OpenReview and in particular Celeste Martinez Gomez and Melisa Bok for the peer-review infrastructure and technical support.
     </p>
 
     <h3>TMLR Action Editors</h3>
