--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -56,15 +56,21 @@
     </p>
     <p class="c1">
       <span class="bold">Summary of contributions</span>
-      <span class="c2">  Brief description, in the reviewer's words, of the contributions and new knowledge presented by the submission. </span>
+      <span class="c2">  Brief description, in the reviewer's words, of the contributions of the submission, including a list any key strengths and/or weaknesses. </span>
     </p>
     <p class="c0">
       <span class="c2"/>
     </p>
     <p class="c1">
-      <span class="bold">Strengths </span>
-      <span class="bold">and weaknesses  </span>
-      <span class="c2">List of the strong aspects of the submission as well as weaker elements (if any) that you think require attention from the authors.</span>
+      <span class="bold">Are the claims made in the submission supported by accurate, convincing and clear evidence? </span>
+      <span class="c2">Yes/No answer to this first <a href="https://jmlr.org/tmlr/editorial-policies.html#evaluation">TMLR decision criteria</a>, along with an explanation.</span>
+    </p>
+    <p class="c0">
+      <span class="c2"/>
+    </p>
+    <p class="c1">
+      <span class="bold">Would at least some individuals in TMLR's audience be interested in knowing the findings of this paper? </span>
+      <span class="c2">Yes/No answer to this second <a href="https://jmlr.org/tmlr/editorial-policies.html#evaluation">TMLR decision criteria</a>, along with an explanation.</span>
     </p>
     <p class="c0">
       <span class="c2"/>
