--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -91,12 +91,12 @@
 <p class="c9"><span>There are 3 possible outcomes: Accept, Accept with minor revision and Reject (see
 <a href="editorial-policies.html">Editorial Policies</a>). As described
         in the <a href="acceptance-criteria.html">Acceptance criteria</a> page, acceptance decisions should be made based on two criteria:</span></p>
-<p class="c0"><span class="c3 c7"></span></p>
-<p class="c9"><span class="c3">Are the claims made in the submission supported by accurate, convincing and clear
-        evidence?</span></p>
-<p class="c9"><span class="c3">Would at least some individuals in TMLR&#39;s audience be interested in the findings
-        of this paper?</span></p>
-<p class="c0"><span class="c4"></span></p>
+<ul class="c9 lst-kix_pfdlg1ai0z44-0">
+        <li><span class="c1">Are the claims made in the submission supported by accurate, convincing and clear
+        evidence?</span></li>
+        <li><span class="c1">Would at least some individuals in TMLR&#39;s audience be interested in the findings
+        of this paper?</span></li>
+</ul>
 <p class="c9"><span>In addition to a decision, for accepted papers, you may also recommend a
 </span><span>certification</span> if
         you think the paper deserves to stand out with one such additional recognition.</span></p>
