Explicitly list that TMLR is self-published.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -57,6 +57,8 @@
 <h1> Organization</h1>
 <p>TMLR is a part of Journal of Machine Learning Research Inc., which also operates publications including <a href="https://jmlr.org/">Journal of Machine Learning Research</a> (JMLR), <a href="https://proceedings.mlr.press/">Proceeding of Machine Learning Research</a> (PMLR), and <a href="https://data.mlr.press/">Data-Centric Machine Learning Research</a> (DMLR).</p>
 
+<p>TMLR is self-published, as the organization Transactions on Machine Learning Research.</p>
+
 <p>TMLR is located at 60 5th Ave, New York, NY 10011. TMLR is an entirely volunteer-run organization.</p>
 
 {% endblock %}
