Clarify desk rejection criteria

--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -27,10 +27,12 @@
         appropriate for TMLR and respects our <a href="editorial-policies.html">submission guidelines</a>. Clear cases of
         desk rejection include submissions that are not anonymized</span><span>,</span><span>&nbsp;submissions that
         do not use the unmodified TMLR stylefile and submissions that clearly </span><span>overlap</span><span
-        class="c4">&nbsp;with work already published in proceedings (or currently under review for publication). If
-        you suspect but are unsure about whether a submission might need to be desk rejected for any other reasons
-        (e.g. lack of fit with the scope of TMLR or lack of technical depth), simply reach out to the Editors in
-        Chief. Note that your identity as the AE responsible for the submission is known to the authors at that stage.
+        class="c4">&nbsp;with work already published in proceedings (or currently under review for publication). 
+        There are other reasons a submission may be desk rejected, including (but not limited to) lack of fit
+        with the scope of TMLR, lack of expertise in the TMLR reviewer pool to evaluate the submission, low likelihood
+        that the submission will meet the acceptance criteria of TMLR (e.g., due to lack of technical depth).
+        If you are suspect but are unsure whether a submission may need to be desk rejected for any reason, simply reach out to the Editors in Chief.
+        Note that your identity as the AE responsible for the submission is known to the authors at that stage.
         <br><br></span><span>Once you've confirmed that a submission is appropriate for TMLR, 
         the submission becomes public.</span></p>
 <p class="c0"><span class="c4"></span></p>
