--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -55,8 +55,9 @@
                 recommend an action editor to oversee the review process.</span></li>
         <li><span class="bold">Reviewing. </span><span>An action editor </span><span>will be
                 assigned</span><span>&nbsp;to the submission within a week. They will evaluate the submission, and may
-                reject it immediately for being out of scope or of poor quality, or having format violations (contingent
-                on Editor-in-Chief approval). Otherwise, the action editor will assign at least three qualified
+                reject it immediately for reasons including (but not limited to): being out of scope, TMLR having insufficient 
+                reviewer expertise to adequately handle, being poor quality or unlikely to meet TMLR's acceptance criteria, 
+                or having format violations (contingent on Editor-in-Chief approval). Otherwise, the action editor will assign at least three qualified
                 reviewers and the paper will become public. Members of the public may volunteer to review the paper;
                 accepting such offers is up to the </span><span>discretion of the action editor</span><span class="c1">.
             </span></li>
