--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -38,6 +38,10 @@
     <b>Conflict of interest.</b> You are responsible for making sure your affiliation and education/career history information is up to date in your OpenReview profile, so we can properly enforce our conflict of interest policy. We consider in conflict any individual or institution with which you have shared a collaboration within the past three years. After being assigned a submission, if you suspect or believe that you have a conflict of interest with any of the authors, consult with the AE for next steps.
 </p>
 
+<p>
+    <b>LLM use.</b> Reviewers are expected to have read the paper themselves, formed their own opinion, and take responsibility for the writing of their reviews. Reviewers can use LLMs and other tools to assist in these tasks. For instance, it is ok to use LLMs to help find the definition of some notation that the reviewer lost track of, for refining grammar or polishing the language, or checking whether a review is aligned with TMLR's criteria. But the reviewer should form their own internal understanding of the paper, and write a review that reflects and expresses their own opinion. 
+</p>
+
     <h2 id="h.q2ee6w3zmhbr">
       <span>Submission Acceptance Standard</span>
     </h2>
