--- a/templates/reviewers.html
+++ b/templates/reviewers.html
@@ -52,6 +52,15 @@ $(document).ready(function(){
 <h1>TMLR Expert Reviewers</h1>
 <br>
 
+  <h2 class="year">2025 Expert Reviewers</h2>
+
+  <ul class="expert-reviewers">{% for e in expert_reviewers_2025 %}
+    <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>
+      <span class="research">[<a href="https://openreview.net/profile?id={{e.id}}">OpenReview</a>] {% if e.gscholar %} [<a href="{{e.gscholar}}">Google Scholar</a>]{% endif %}</span>
+    {% endfor %}
+  </ul>
+  <br><br>
+
   <h2 class="year">2024 Expert Reviewers</h2>
 
   <ul class="expert-reviewers">{% for e in expert_reviewers_2024 %}
