--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -170,8 +170,16 @@
             </span><span>Papers that not only meet the criteria for acceptance but also provide an exceptionally
                 thorough or insightful survey of the topic or approach may be awarded this certification.</span></li>
     </ul>
-    <p><span class="c1">Finally, an <span class="bold">Expert Certification</span> are awarded to papers that are <span>authored</span><span class="c1">&nbsp;by
-                highly-rated TMLR reviewers (i.e. our <a href="https://openreview.net/group?id=TMLR/Expert_Reviewers">Expert Reviewers</a>), to recognize their contributions and expertise.</span></p>
+    <p><span class="c1">Finally, other certifications are added to publications based on specialized processes:</span></p>
+    <ul class="c9 lst-kix_pfdlg1ai0z44-0">
+        <li><span class="bold">J2C Certification. </span><span class="c1">Awarded to publications based on responses by the AE and reviewers, 
+            to the question of whether the work would be appropriate for the joint <a href="https://neurips.cc/public/JournalToConference">NeurIPS/ICLR/ICML Journal-to-Conference Track</a>. 
+            Receiving this selective certification (or the Outstanding/Featured Certifications) enables an opportunity to present in this track at one 
+            of these participating conferences. See the <a href="https://neurips.cc/public/JournalToConference">track’s website</a> for details and the complete list of eligibility criteria.</span></li>
+        <li><span class="bold">Expert Certification. </span><span> Awarded to papers that are authored by
+            highly-rated TMLR reviewers (i.e. our <a href="https://openreview.net/group?id=TMLR/Expert_Reviewers">Expert Reviewers</a>), 
+            to recognize their contributions and expertise.</span></li>
+    </ul>
 
     <h2><span class="c5">Open access policy</span></h2>
     <p><span class="c1">TMLR makes all published content immediately available to the public free of charge.
