--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -162,6 +162,11 @@
             </span><span>Papers that not only meet the criteria for acceptance but also provide an exceptionally
                 thorough or insightful survey of the topic or approach may be awarded this certification.</span></li>
     </ul>
+    <p><span class="c1">Reviewers are also asked whether they recommend the work to the 
+        <a href="https://neurips.cc/public/JournalToConference">NeurIPS</a>/<a href="https://iclr.cc/public/JournalToConference">ICLR</a>/<a href="https://icml.cc/public/JournalToConference">ICML</a> 
+        Journal-to-Conference Track. The reviewers' recommendation, along with that of the Action Editor, will determine whether the TMLR submission will receive a <span class="bold">J2C Certification.</span>
+        Receiving this selective certification (or the Outstanding/Featured Certifications) enables an opportunity to present in this track at one 
+        of the participating conferences. See the <a href="https://neurips.cc/public/JournalToConference">track’s website</a> for details and the complete list of eligibility criteria.</span></p>
 
 
 {% endblock %}
