Fix .event to .j2c

--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -208,7 +208,7 @@ div, iframe {
             $('#j2cbadge').removeClass("hovered");
         } else {
             $('.item').hide();
-            $('.event').show();
+            $('.j2c').show();
             $('.framed .badge').removeClass("hovered");
             $('#j2cbadge').addClass("hovered");
             focus = this;
