Updated papers link.

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,7 @@ ul li {
   <br>
   <ul id="nav">
     <li><a href="/tmlr/index.html">Home</a></li>
-    <li><a href="/tmlr/papers/">Papers</a></li>
+    <li><a href="/tmlr/papers/index.html">Papers</a></li>
     <li><a href="/tmlr/submissions.html">Submissions</a></li>
     <li><a href="/tmlr/editorial-policies.html">Submission Guidelines and Editorial Policies</a></li>
     <li><a href="/tmlr/acceptance-criteria.html">Acceptance Criteria</a></li>
