fix typo in url

--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -72,7 +72,7 @@
         to react to. Overall, any intervention that will help you come to a decision recommendation for the
         submission is encouraged (as long as it maintains the anonymity of the authors and reviewers). </p>
 <p class="c0"><span class="c4"></span></p>
-<p class="c9">Our <a href="ethhics.html">Ethics Guidelines</a> describe TMLR&rsquo;s ethical principles and establish common
+<p class="c9">Our <a href="ethics.html">Ethics Guidelines</a> describe TMLR&rsquo;s ethical principles and establish common
         ground for editors, reviewers, and authors to evaluate the potential for harm of a proposed
         work.</span><span>&nbsp;</span><span>If you or any of the reviewers have concerns around the ethical
         implications of the submission, check whether the authors address the concerns in the (otherwise optional)
