--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -5,6 +5,7 @@
 <h1>TMLR News</h1>
 
 <ul>
+  <li><i>2025.10.21</i>: <a href="https://medium.com/@TmlrOrg/tmlr-joins-neurips-icml-iclr-journal-to-conference-track-937a898eab3d">TMLR announces the Journal to Conference Certification and joins the NeurIPS/ICML/ICLR Journal-to-Conference Track</a></li>
   <li><i>2025.01.02</i>: We are happy to welcome Nihar Shah to the TMLR Editors-in-Chief, while we bade farewell to Kyunghyun Cho. Sincere gratitude to Kyunghyun for his pivotal role in TMLR!</li>
   <li><i>2024.12.19</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-2024-tmlr-outstanding-certification-65f25d05c37c">The 2024 TMLR Outstanding Certifications</a></li>
   <li><i>2024.11.26</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2024 to January 6 2025 (midnight AOE on both dates). We will resume accepting new submissions on January 7, 2025. Happy Holidays!</li>
