--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,7 @@ TMLR papers can also have videos, check out the papers with videos at the <a hre
 <h2>News</h2>
 
 <ul>
+  <li><i>2025.11.15</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2025 to January 5 2026 (midnight AOE on both dates). We will resume accepting new submissions on January 6, 2026. Happy Holidays!</li>
   <li><i>2025.10.21</i>: <a href="https://medium.com/@TmlrOrg/tmlr-joins-neurips-icml-iclr-journal-to-conference-track-937a898eab3d">TMLR announces the Journal to Conference Certification and joins the NeurIPS/ICML/ICLR Journal-to-Conference Track</a></li>
   <li><i>2025.01.24</i>: <a href="https://docs.google.com/document/d/1_lUT03lHtwLKnFaN_RYjxnG8MX5DGcFAbfUQY6YxQsI">2024 Annual report released</a></li>
   <li><i>2025.01.02</i>: We are happy to welcome Nihar Shah to the TMLR Editors-in-Chief, while we bade farewell to Kyunghyun Cho. Sincere gratitude to Kyunghyun for his pivotal role in TMLR!</li>
