Added TMLR Beyond PDF announcement.

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,13 @@ h2 {
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Uc1r1LfJtds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
+<h2>TMLR Beyond PDF</h2>
+
+<a href="https://tmlr-beyond-pdf.org"><img alt="TMLR Beyond PDF" src="img/TMLR_Beyond_PDF_Logo.png" style="width: 300px;" title="TMLR Beyond PDF"></a>
+
+<a href="https://tmlr-beyond-pdf.org">TMLR Beyond PDF</a> is a new, HTML-based submission format for TMLR, that supports interactive figures and videos, along with the usual LaTeX and images.
+
+
 <h2>Videos</h2>
 
 TMLR papers can also have videos, check out the papers with videos at the <a href="https://tmlr.infinite-conf.org/index.html">TMLR Infinite Conference</a>.
@@ -35,6 +42,7 @@ TMLR papers can also have videos, check out the papers with videos at the <a hre
 <h2>News</h2>
 
 <ul>
+  <li><i>2025.11.25</i>: TMLR announces <a href="https://tmlr-beyond-pdf.org">TMLR Beyond PDF</a>, a new, HTML-based submission format for TMLR that support interactive figures and videos.</li>
   <li><i>2025.11.15</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2025 to January 5 2026 (midnight AOE on both dates). We will resume accepting new submissions on January 6, 2026. Happy Holidays!</li>
   <li><i>2025.10.21</i>: <a href="https://medium.com/@TmlrOrg/tmlr-joins-neurips-icml-iclr-journal-to-conference-track-937a898eab3d">TMLR announces the Journal to Conference Certification and joins the NeurIPS/ICML/ICLR Journal-to-Conference Track</a></li>
   <li><i>2025.01.24</i>: <a href="https://docs.google.com/document/d/1_lUT03lHtwLKnFaN_RYjxnG8MX5DGcFAbfUQY6YxQsI">2024 Annual report released</a></li>
