--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -37,8 +37,8 @@
         the submission becomes public.</span></p>
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span class="bold">Assignment</span><span class="bold">&nbsp;of reviewers</span><span>&nbsp; Once
-        confirmed that a submission is appropriate for TMLR, you should assign it for review to at
-</span><span>least 3 reviewers</span><span>. You must make the initial assignment </span><span>within
+        confirmed that a submission is appropriate for TMLR, you should assign it for review to 
+</span><span>3 reviewers</span><span>. You must make the initial assignment </span><span>within
 </span><span>a week of accepting a paper&rsquo;s assignment. TMLR will give you access to a pool of reviewers
         who have already committed to reviewing for TMLR. However make sure to avoid reviewers
 </span><span>who</span><span>&nbsp;</span><span>1) have already filled their annual quota or 2) have an
