Add reviewer volunteer forms

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -11,11 +11,9 @@
         Action Editor)?
 </p>
 <p>
-    A: Great! We have filled our reviewer and AE pools for now, but you can volunteer to review any submission via
-    OpenReview (a "Volunteer to Review" button should be visible if you are logged in). You can also ask a current Action
-    Editor that can vouch for your qualifications to add you as a reviewer. If you would like to be an Action Editor and
-    believe that you are qualified through your academic credentials as a professor or through your experience (e.g. as
-    an Area Chair or Editor), please contact the Editors-in-Chief.
+A: Great! You can volunteer to join the reviewer pool or action editor pool by filling out these <a href="https://docs.google.com/forms/d/17_GcSO6GlH421ZcHk6RMSPv8csLwAkUsoWtGp6fHtGk/viewform">two</a> <a href="https://docs.google.com/forms/d/15NhnkLycoYn7Yltrgtx-SbwoOgoOw_Ey-jZJ8Gykkg4/viewform">forms</a>.
+    Furthermore, you can volunteer to review any individual submission via OpenReview (a "Volunteer to Review" button should be visible if you are logged in). You can also ask a current Action
+    Editor that can vouch for your qualifications to add you as a reviewer. 
 </p>
 <p><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some
         journals, or just one round as with most conferences?
