Modify reviewer AE nomination

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -11,7 +11,7 @@
         Action Editor)?
 </p>
 <p>
-A: Great! You can volunteer to join the reviewer pool or action editor pool by filling out these <a href="https://docs.google.com/forms/d/17_GcSO6GlH421ZcHk6RMSPv8csLwAkUsoWtGp6fHtGk/viewform">two</a> <a href="https://docs.google.com/forms/d/15NhnkLycoYn7Yltrgtx-SbwoOgoOw_Ey-jZJ8Gykkg4/viewform">forms</a>.
+A: Great! You can volunteer to join the reviewer pool or action editor pool by filling out these forms (<a href="https://docs.google.com/forms/d/17_GcSO6GlH421ZcHk6RMSPv8csLwAkUsoWtGp6fHtGk/viewform">reviewer nomination</a> <a href="https://docs.google.com/forms/d/15NhnkLycoYn7Yltrgtx-SbwoOgoOw_Ey-jZJ8Gykkg4/viewform">AE nomination</a>).
     Furthermore, you can volunteer to review any individual submission via OpenReview (a "Volunteer to Review" button should be visible if you are logged in). You can also ask a current Action
     Editor that can vouch for your qualifications to add you as a reviewer. 
 </p>
