--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@ TMLR papers can also have videos, check out the papers with videos at the <a hre
 <h2>Editors-in-Chief</h2>
 
 <p>
-Editors-in-Chief of TMLR are <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a> (Mila), <a href="https://scholar.google.fr/citations?user=suSmYHoAAAAJ&hl=en">Naila Murray</a> (Meta), <a href="http://www.gautamkamath.com/">Gautam Kamath</a> (University of Waterloo), and <a href="https://www.cs.cmu.edu/~nihars/">Nihar B. Shah</a> (CMU). Founding Editors-in-Chief include Hugo, <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a>, and <a href="https://raiahadsell.com/index.html">Raia Hadsell</a>. TMLR's Managing Editor is <a href="https://www.paulvicol.com/">Paul Vicol</a> (Google DeepMind), who succedes the founding Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google DeepMind). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a>.
+Editors-in-Chief of TMLR are <a href="https://www.cs.toronto.edu/~lcharlin/">Laurent Charlin</a> (HEC Montréal), <a href="http://www.gautamkamath.com/">Gautam Kamath</a> (University of Waterloo), <a href="https://scholar.google.fr/citations?user=suSmYHoAAAAJ&hl=en">Naila Murray</a> (Meta), and <a href="https://www.cs.cmu.edu/~nihars/">Nihar B. Shah</a> (CMU). Founding Editors-in-Chief include <a href="https://kyunghyuncho.me/">Kyunghyun Cho</a>, <a href="https://raiahadsell.com/index.html">Raia Hadsell</a>, and <a href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>. TMLR's Managing Editor is <a href="https://www.paulvicol.com/">Paul Vicol</a> (Google DeepMind), who succedes the founding Managing Editor <a href="http://fa.bianp.net">Fabian Pedregosa</a> (Google DeepMind). The goal of TMLR and the Editors-in-Chief is to support the evolving needs of the machine learning community. We welcome your feedback and comments via e-mail: <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a>.
 </p>
 
 
@@ -87,6 +87,8 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
             Chouldechova</a>: Microsoft Research and Carnegie Mellon University.</p>
 <p><a class="c1"
             href="https://raiahadsell.com/index.html">Raia Hadsell</a>: Google DeepMind.</p>
+<p><a class="c1"
+            href="https://mila.quebec/en/directory/hugo-larochelle">Hugo Larochelle</a>: Mila.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://www.cs.cornell.edu/home/llee/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1sHcITy7nK-iJHzetG-P9J">Lillian
             Lee</a>: Cornell University.</p>
