--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -45,16 +45,17 @@ $(document).ready(function(){
     <h1>TMLR Editorial Board</h1>
     <h3>Editors-in-Chief</h3>
     <ul class="editors">
+      <li><a class="name" href="https://www.cs.toronto.edu/~lcharlin/">Laurent Charlin</a>, HEC Montréal.</li>
       <li><a class="name" href="http://www.gautamkamath.com/">Gautam Kamath</a>, University of Waterloo.</li>
-      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila.</li>
       <li><a class="name" href="https://openreview.net/profile?id=~Naila_Murray1">Naila Murray</a>, Meta AI.</li>
       <li><a class="name" href="https://www.cs.cmu.edu/~nihars/">Nihar B. Shah</a>, CMU.</li>
     </ul>
 
     <h3>Past Editors-in-Chief</h3>
     <ul class="editors">
-      <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, Genentech and New York University.</li>
-      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, Google DeepMind.</li>
+      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, Google DeepMind (2022 - 2023).</li>
+      <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, New York University (2022 - 2024).</li>
+      <li><a class="name" href="https://mila.quebec/en/directory/hugo-larochelle">Hugo Larochelle</a>, Mila (2022 - 2025).</li>
     </ul>
 
     <!-- <ul class="editors">{% for e in editors_in_chief %}
