--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@ TMLR papers can also have videos, check out the papers with videos at the <a hre
 <h2>News</h2>
 
 <ul>
+  <li><i>2026.01.01</i>: Welcome Laurent Charlin to the TMLR Editors-in-Chief! Enormous thank you to Hugo Larochelle, the last remaining founding Editor-in-Chief, who completes his term.</li>
   <li><i>2025.11.25</i>: TMLR announces <a href="https://tmlr-beyond-pdf.org">TMLR Beyond PDF</a>, a new, HTML-based submission format for TMLR that support interactive figures and videos.</li>
   <li><i>2025.11.15</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2025 to January 5 2026 (midnight AOE on both dates). We will resume accepting new submissions on January 6, 2026. Happy Holidays!</li>
   <li><i>2025.10.21</i>: <a href="https://medium.com/@TmlrOrg/tmlr-joins-neurips-icml-iclr-journal-to-conference-track-937a898eab3d">TMLR announces the Journal to Conference Certification and joins the NeurIPS/ICML/ICLR Journal-to-Conference Track</a></li>
