--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@ TMLR papers can also have videos, check out the papers with videos at the <a hre
 
 <ul>
   <li><i>2026.01.01</i>: Welcome Laurent Charlin to the TMLR Editors-in-Chief! Enormous thank you to Hugo Larochelle, the last remaining founding Editor-in-Chief, who completes his term.</li>
+  <li><i>2025.12.01</i>: The <a href="https://medium.com/@TmlrOrg/announcing-the-2025-tmlr-outstanding-certification-e26d548ff011">2025 TMLR Outstanding Certification</a> is awarded to Mantis: Interleaved Multi-Image Instruction Tuning.</li>
   <li><i>2025.11.25</i>: TMLR announces <a href="https://tmlr-beyond-pdf.org">TMLR Beyond PDF</a>, a new, HTML-based submission format for TMLR that support interactive figures and videos.</li>
   <li><i>2025.11.15</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2025 to January 5 2026 (midnight AOE on both dates). We will resume accepting new submissions on January 6, 2026. Happy Holidays!</li>
   <li><i>2025.10.21</i>: <a href="https://medium.com/@TmlrOrg/tmlr-joins-neurips-icml-iclr-journal-to-conference-track-937a898eab3d">TMLR announces the Journal to Conference Certification and joins the NeurIPS/ICML/ICLR Journal-to-Conference Track</a></li>
@@ -52,12 +53,6 @@ TMLR papers can also have videos, check out the papers with videos at the <a hre
   <li><i>2024.11.26</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2024 to January 6 2025 (midnight AOE on both dates). We will resume accepting new submissions on January 7, 2025. Happy Holidays!</li>
   <li><i>2024.02.16</i>: <a href="https://docs.google.com/document/d/13mknNOEvwkibxxrES-RrvgbWIuXY6u0PpMjnMrvp6h0/">2023 Annual report released</a></li>
   <li><i>2024.01.12</i>: Naila Murray joins the TMLR Editors-in-Chief, replacing outgoing Editor-in-Chief Raia Hadsell. Thanks to Raia for her valuable service!</li>
-  <li><i>2023.10.18</i>: <a href="https://reproml.org/blog/announcing_mlrc2023/">TMLR partners with the 2023 Machine Learning Reproducibility Challenge</a>.</li>
-  <li><i>2023.10.07</i>: <a href="https://blog.iclr.cc/2023/10/06/authors-of-tmlr-publications-with-featured-and-outstanding-certifications-at-iclr-2024/">ICLR 2024 invites authors of TMLR papers with Featured or Outstanding Certifications to present</a></li>
-  <li><i>2023.09.12</i>: <a href="https://openreview.net/group?id=TMLR/Event_Certifications&event=automl.cc/AutoML/2023/Journal_Track">TMLR papers</a> featured at <a href="https://2023.automl.cc/">AutoML 2023</a> Journal Track</li>
-  <li><i>2023.08.22</i>: <a href="https://openreview.net/group?id=TMLR/Event_Certifications&event=lifelong-ml.cc/CoLLAs/2023/Journal_Track">TMLR papers</a> featured at <a href="https://lifelong-ml.cc/Conferences/2023">CoLLAs 2023</a> Journal Track</li>
-    <li><i>2023.07.10</i>: <a href="https://tmlr.infinite-conf.org/">TMLR Infinite Conference launched</a></li>
-    <li><i>2023.07.05</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-first-tmlr-outstanding-certification-3a2838c08cda">"A Generalist Agent" awarded the first Outstanding Certification</a></li>
     <li><a href="/tmlr/news/">More news ...</a></li>
 </ul>
 
