--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -5,6 +5,10 @@
 <h1>TMLR News</h1>
 
 <ul>
+  <li><i>2026.01.01</i>: Welcome Laurent Charlin to the TMLR Editors-in-Chief! Enormous thank you to Hugo Larochelle, the last remaining founding Editor-in-Chief, who completes his term.</li>
+  <li><i>2025.12.01</i>: The <a href="https://medium.com/@TmlrOrg/announcing-the-2025-tmlr-outstanding-certification-e26d548ff011">2025 TMLR Outstanding Certification</a> is awarded to Mantis: Interleaved Multi-Image Instruction Tuning.</li>  
+  <li><i>2025.11.25</i>: TMLR announces <a href="https://tmlr-beyond-pdf.org">TMLR Beyond PDF</a>, a new, HTML-based submission format for TMLR that support interactive figures and videos.</li>
+  <li><i>2025.11.15</i>: TMLR will pause new submissions over the upcoming holiday period from December 2 2025 to January 5 2026 (midnight AOE on both dates). We will resume accepting new submissions on January 6, 2026. Happy Holidays!</li>
   <li><i>2025.10.21</i>: <a href="https://medium.com/@TmlrOrg/tmlr-joins-neurips-icml-iclr-journal-to-conference-track-937a898eab3d">TMLR announces the Journal to Conference Certification and joins the NeurIPS/ICML/ICLR Journal-to-Conference Track</a></li>
   <li><i>2025.01.02</i>: We are happy to welcome Nihar Shah to the TMLR Editors-in-Chief, while we bade farewell to Kyunghyun Cho. Sincere gratitude to Kyunghyun for his pivotal role in TMLR!</li>
   <li><i>2024.12.19</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-2024-tmlr-outstanding-certification-65f25d05c37c">The 2024 TMLR Outstanding Certifications</a></li>
