Updated email to be tmlr-editors@jmlr.org everywhere.

--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -122,7 +122,7 @@
             mitigations in an (otherwise optional) Broader Impact Statement. In situations where a reviewer with ethics
             expertise is required to evaluate the impact and potential for harm, or where the action editor suspects
             that no statement would make the work ethically acceptable, reach out to the
-       <a href="mailto:tmlr@jmlr.org">Editors-in-Chief</a>. </span>
+       <a href="mailto:tmlr-editors@jmlr.org">Editors-in-Chief</a>. </span>
     </p>
     <h2 id="evaluation">Evaluation criteria</h2>
     <p><span class="c1">The acceptance decision for a submission is based on the answers to the following
