--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,13 +11,13 @@
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>Please address any inquiries about the status of a paper under review to the Action Editor in
             charge of your paper. </span><span>This can be done through OpenReview</span><span class="c0">, by
-            submitting a comment and putting the AE as a reader. Only if your AE is not responsive reach out to us at
-            <a href="mailto:tmlr-info@jmlr.org">tmlr-info@jmlr.org</a> .</span></p>
+            submitting a comment and putting the AE as a reader. If your AE is not responsive, reach out to us at
+            <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a> .</span></p>
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>If you found issues on the TMLR website (jmlr.org/tmlr), such as typos or broken links, please
             report them to the <a href="https://github.com/JmlrOrg/tmlr/issues">github issue tracker</a>.</p>
     <p class="c3 c5"><span class="c0"></span></p>
-    <p class="c3"><span>For any other issues, please contact our editors-in-chief (Kyunghyun Cho, Gautam Kamath, Hugo Larochelle, and Naila Murray) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
+    <p class="c3"><span>For any other issues, please contact our editors-in-chief (Laurent Charlin, Gautam Kamath, Naila Murray, and Nihar B. Shah) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
 
 
     <h1>Communication</h1>
